--- a/.gitignore
+++ b/.gitignore
@@ -59,6 +59,7 @@ buildNumber.properties
 .idea/**/uiDesigner.xml
 .idea/**/dbnavigator.xml
 .idea/*.xml
+.idea/compiler.xml
 
 # Gradle
 .idea/**/gradle.xml
